Fix enige layout bugs in videospeler, maak NL

--- a/src/styles/video-player.css
+++ b/src/styles/video-player.css
@@ -4,3 +4,11 @@
   width: 100%;
   height: 100%;
 }
+
+.video-box button {
+  text-align: center;
+}
+
+.video-box .material-svg-icon {
+  box-sizing: content-box;
+}
